# meetupcpp-may-2019

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  matrix_add_sycl.cpp  vector_add_cuda.cu  vector_add_opencl.cpp  vector_add_sycl.cpp  vector_add_sycl_scalar.cpp  vector_add_sycl_serial.cpp  vector_add_tmp_sycl.cpp  vector_add_tmp_sycl_scalar.cpp  vector_add_tmp_sycl_serial.cpp
slides/: config.toml
slides/content/: _index.md
snippets/: parallelstl.cpp  spmd.cpp  stream-programming.cpp
